syntax = "proto3";

service AccommodationCrud {
  rpc GetAll (Empty) returns (Accommodations);
  rpc GetById (DtoId) returns (Accommodation);
  rpc Create (Accommodation) returns (Empty);
  rpc Delete (DtoId) returns (Empty);
  rpc Update (Accommodation) returns (Empty);
  rpc GetByLocation (Location) returns (Accommodations);
  rpc DeleteByUser (DtoId) returns (Empty);
  rpc GetByUser (DtoId) returns (Accommodations);
}

message Empty {
}

message Location {
  string country = 2;
  string city = 3;
  string address = 4;
}

message Accommodation {
  string id = 1;
  string user_id = 2;
  string name = 3;
  Location location = 4;
  repeated string features = 5;
  repeated string image_urls = 6;
  int32 min_guests = 7;
  int32 max_guests = 8;
}

message Accommodations {
  repeated Accommodation items = 1;
}

message DtoId {
  string id = 1;
}
